[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconductor"
version = "2.0.0"
description = "Field-ready Python reconnaissance powerhouse for subdomain enumeration and vulnerability scanning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ReconDuctor Team"}
]
keywords = ["reconnaissance", "subdomain", "enumeration", "security", "pentesting", "bug-bounty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0",
    "mmh3>=4.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
reconductor = "reconductor.cli:app"

[project.urls]
Homepage = "https://github.com/reconductor/reconductor-v2"
Documentation = "https://github.com/reconductor/reconductor-v2#readme"
Repository = "https://github.com/reconductor/reconductor-v2"
Issues = "https://github.com/reconductor/reconductor-v2/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reconductor*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
